--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -101,7 +101,7 @@
 - name: Enable IP forwarding
   sysctl:
     name: net.ipv4.ip_forward
-    value: 1
+    value: "1"
     sysctl_set: yes
     state: present
     reload: yes
